# nexus-terminal

./: .gitignore  README.md  generate_icon.py  install.sh  launch.sh  nexus.py  providers.py  pyproject.toml  requirements.txt
Nexus.app/Contents/: Info.plist
Nexus.app/Contents/MacOS/: nexus-launcher
nexus_app/: __init__.py  __main__.py  cli.py  config.py  providers.py  server.py
nexus_app/plugins/: __init__.py  base.py  git_local.py  github.py  system.py
nexus_app/static/: app.js  index.html  style.css
static/: holo.js  index.html  style.css
